# Temple_Run

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  assets.json  config.json
Element/: CMakeLists.txt
Element/include/Element/: .hpp  Character.hpp  FinishingLine.hpp  Hole.hpp  LeftTurn.hpp  Object.hpp  ObjectList.hpp  Obstacle.hpp  RightTurn.hpp  Skybox.hpp  Stone.hpp
Element/src/: Character.cpp  Object.cpp  ObjectList.cpp  Stone.cpp
Error/include/Error/: DevError.hpp  Error.hpp
Game/: CMakeLists.txt
Game/include/Game/: AssetsManager.hpp  Camera.hpp  Configuration.hpp  Game.hpp  GameManager.hpp  Level.hpp  Menu.hpp
Game/src/: AssetsManager.cpp  Camera.cpp  Configuration.cpp  Game.cpp  GameManager.cpp  Level.cpp  Menu.cpp  test
Levels/Tests/: test1.ppm  test3.ppm
Mesh/: CMakeLists.txt
Mesh/include/Mesh/: Cube.hpp  Mesh.hpp  Sphere.cpp  Sphere.hpp
Mesh/src/: Cube.cpp  Mesh.cpp  Sphere.cpp
Object/include/Object/: Stone.hpp
Render/: CMakeLists.txt
Render/include/Render/: Camera.hpp  Cube.hpp  FilePath.hpp  IBO.hpp  Menu.hpp  Program.hpp  Render.hpp  Shader.hpp  ShaderManager.hpp  Texture.hpp  VAO.hpp  VBO.hpp  camera.hpp
Render/src/: Camera.cpp  IBO.cpp  Menu.cpp  Program.cpp  Render.cpp  ShaderManager.cpp  Texture.cpp  VAO.cpp  VBO.cpp
TEMPLE_RUN/: CMakeLists.txt  assets.json  config.json  cube.cpp  levelMenu.cpp  main.cpp  mainMenu.cpp  menu.cpp  test.json  testCamera.cpp  testGame.cpp  testMesh.cpp  testSkybox.cpp
TEMPLE_RUN/shaders/: 3D.vs.glsl  default.fs.glsl  normals.fs.glsl  tex2D.vs.glsl  tex3D.fs.glsl  tex3D.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
data/: assets.json  config.json
data/levels/level1/: config.json  floor_0.ppm  floor_1.ppm  floor_2.ppm  floor_3.ppm
data/levels/level2/: config.json  floor_0.ppm  floor_2.ppm
data/levels/level3/: config.json  floor_1.ppm
data/shaders/: 3D.vs.glsl
dependencies/assimp/: DartConfiguration.tcl
dependencies/jsoncpp/: CMakeLists.old.txt  CMakeLists.txt
doc/: CMakeLists.txt  Doxyfile-html  Doxyfile-html.cmake
doc/html/: 3_d_s_exporter_8h_source.html  3_d_s_helper_8h_source.html  3_d_s_loader_8h_source.html  _2home_2amina_2_desktop_2_temple_01_run_2dependencies_2assimp_2contrib_2irr_x_m_l_2irr_x_m_l_8h-example.html  _a_c_loader_8h_source.html  _a_m_f_importer_8hpp_source.html  _a_m_f_importer___macro_8hpp_source.html  _a_m_f_importer___node_8hpp_source.html  _a_s_e_loader_8h_source.html  _a_s_e_parser_8h_source.html  _assbin_exporter_8h_source.html  _assbin_loader_8h_source.html  _assets_manager_8hpp.html  _assets_manager_8hpp__dep__incl.dot  _assets_manager_8hpp__dep__incl.md5  _assets_manager_8hpp__incl.dot  _assets_manager_8hpp__incl.md5  _assets_manager_8hpp_source.html  _assxml_exporter_8h_source.html  _b3_d_importer_8h_source.html  _b_v_h_loader_8h_source.html  _base_importer_8h_source.html  _base_process_8h_source.html  _bitmap_8h_source.html  _blender_b_mesh_8h_source.html  _blender_d_n_a_8h_source.html  _blender_intermediate_8h_source.html  _blender_loader_8h_source.html  _blender_modifier_8h_source.html  _blender_scene_8h_source.html  _blender_scene_gen_8h_source.html  _blender_tessellator_8h_source.html  _blob_i_o_system_8h_source.html  _byte_swapper_8h_source.html  _c4_d_importer_8h_source.html  _c_interface_i_o_wrapper_8h_source.html  _c_o_b_loader_8h_source.html  _c_o_b_scene_8h_source.html  _c_s_m_loader_8h_source.html  _calc_tangents_process_8h_source.html  (+464 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_19.js  classes_2.js  (+237 more)
glimac/include/glimac/: FreeflyCamera.hpp  Model.hpp  Program.hpp  Shader.hpp  common.hpp  (+1 more)
glimac/src/: Model.cpp  Program.cpp  Shader.cpp
levels/level1/: config.json  floor_1.ppm
levels/test1/: config.json  floor_1.ppm
levels/test2/: floor_2.ppm
shaders/: default.fs.glsl  tex2D.fs.glsl  tex3D.vs.glsl
src/: main.cpp
src/Error/: CMakeLists.txt
src/Game/: CMakeLists.txt
src/Object/: CMakeLists.txt
